WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103318
Don't throw an exception if user gesture is required for load
https://bugs.webkit.org/show_bug.cgi?id=103318
Summary
Don't throw an exception if user gesture is required for load
Min Qin
Reported
2012-11-26 16:32:52 PST
Don't throw an exception if user gesture is required for load
Attachments
Patch
(4.04 KB, patch)
2012-11-26 16:42 PST
,
Min Qin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Min Qin
Comment 1
2012-11-26 16:42:17 PST
Created
attachment 176109
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-27 09:40:11 PST
Comment on
attachment 176109
[details]
Patch Clearing flags on attachment: 176109 Committed
r135866
: <
http://trac.webkit.org/changeset/135866
>
WebKit Review Bot
Comment 3
2012-11-27 09:40:14 PST
All reviewed patches have been landed. Closing bug.
Dean Jackson
Comment 4
2012-11-27 09:45:43 PST
Source/WebCore/html/HTMLMediaElement.cpp:679:44: error: unused parameter 'ec'
Dean Jackson
Comment 5
2012-11-27 09:54:21 PST
This broke the Apple builds. Fixed in
r135869
. This would have been detected by the EWS - please make sure to submit the patches for review there.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug