Don't throw an exception if user gesture is required for load https://bugs.webkit.org/show_bug.cgi?id=103318

Patch by Min Qin <qinmin@chromium.org> on 2012-11-27
Reviewed by Eric Carlson.

Source/WebCore:

There is no need to throw an exception if media load requires user gesture.
Since chrome does not render the poster and media control after an exception is thrown, throwing an exception may break a lot of sites on android.
Change a current test to match the new behavior: media/video-load-require-user-gesture.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::load):

LayoutTests:

Check that exception is not thrown and metadata is not loaded if media load requires user gesture.

* media/video-load-require-user-gesture-expected.txt:
* media/video-load-require-user-gesture.html:

Canonical link: https://commits.webkit.org/121513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135866 268f45cc-cd09-0410-ab3c-d52691b4dbfc